--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link rel="stylesheet" type="text/css" href="stylesheets/datatables.min.css"/>
-    <script type="text/javascript" src="javascripts/datatables.min.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/datatables.min.css"/>
+    <script type="text/javascript" src="javascripts/datatables.min.js"></script> -->
   </head>
 
   <body>
