--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -34,9 +34,34 @@
 </table>
 
 
+<!--ここからDatatables-->
 <script>
-jQuery ->
-  $('#students').dataTable()
+// jQuery ->
+//   $('#students').dataTable()
+$(document).ready(function() {
+    $('#students').DataTable( {
+        dom: 'Bfrtip',
+        buttons: [
+            {
+                extend: 'colvisGroup',
+                text: 'Office info',
+                show: [ 1, 2 ],
+                hide: [ 3, 4, 5 ]
+            },
+            {
+                extend: 'colvisGroup',
+                text: 'HR info',
+                show: [ 3, 4, 5 ],
+                hide: [ 1, 2 ]
+            },
+            {
+                extend: 'colvisGroup',
+                text: 'Show all',
+                show: ':hidden'
+            }
+        ]
+    } );
+} );
 </script>
 
 <!-- ここからDataTablesの動作検証 -->
