Validation of DataTables completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,16 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+
+
+    <!-- <%= stylesheet_link_tag    'application', media: 'screen', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %> -->
     <!-- <link rel="stylesheet" type="text/css" href="stylesheets/datatables.min.css"/>
     <script type="text/javascript" src="javascripts/datatables.min.js"></script> -->
+    <!-- <%= javascript_include_tag 'https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js' %>
+    <%= javascript_include_tag 'https://cdn.datatables.net/buttons/1.5.2/js/buttons.colVis.min.js' %> -->
+
   </head>
 
   <body>
