--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,12 @@
   </head>
 
   <body>
+  <div class="container">
+    <div class="alert-nav">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
     <%= yield %>
+    </div>
+    </div>
   </body>
 </html>
